--- a/app/src/main/res/layout/activity_add_new_user.xml
+++ b/app/src/main/res/layout/activity_add_new_user.xml
@@ -31,11 +31,12 @@
 
     <Button
         android:id="@+id/saveButton"
-        android:layout_width="match_parent"
+        android:layout_width="200sp"
         android:layout_height="wrap_content"
         android:text="Save"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lastNameInput" />
 </androidx.constraintlayout.widget.ConstraintLayout>
