--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <Button android:id="@+id/addNewUserButton"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/addNewUserButton"
+        android:layout_width="200sp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:text="New User"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Add New User"
-        android:textAllCaps="false"/>
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+
+    <Button
+        android:id="@+id/addNewBookButton"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="New Book"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addNewUserButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout >
